<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ThirdPartyTransactions">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="110dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.217">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdParty"
            android:textAlignment="center"
            android:textColor="#1A3F7D"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button style="style_btn"
            android:id="@+id/btn_oneTime"
            android:text="@string/thirdParty_opt_1"
            android:backgroundTint="#FFC107"
            android:textColor="#1A3F7D"
            android:textColorHint="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/thirdParty_opt_1_desc"
            android:textColor="#1A3F7D"
            android:textSize="18sp" />

        <Button style="style_btn"
            android:id="@+id/btn_regBenefic"
            android:text="@string/thirdParty_opt_2"
            android:backgroundTint="#FFC107"
            android:textColor="#1A3F7D"
            android:textColorHint="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/thirdParty_opt_2_desc"
            android:textColor="#1A3F7D"
            android:textSize="18sp" />

        <Button style="style_btn"
            android:id="@+id/btn_manageBenefic"
            android:text="@string/thirdParty_opt_3"
            android:backgroundTint="#FFC107"
            android:textColor="#1A3F7D"
            android:textColorHint="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/thirdParty_opt_3_desc"
            android:textColor="#1A3F7D"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>