<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        tools:context=".one_time_transfer">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="110dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.217">

        <TextView
            android:id="@+id/tv_thirdParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdParty_opt_2"
            android:textAlignment="center"
            android:textColor="#1A3F7D"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromAccount"
            android:textColor="#1A3F7D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/account_list_oneTime"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="Username"
            android:textColor="#1A3F7D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_select_beneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectBeneficiaryName"
            android:textColor="#1A3F7D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/beneficiary_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="#1A3F7D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_beneficiaryAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TransferAmount"
            android:textColor="#1A3F7D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/en_transAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHighlight="#1A3F7D"
            android:textColorLink="#1A3F7D" />

        <TextView
            android:id="@+id/tv_transDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TransferDate"
            android:textColor="#1A3F7D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/en_transDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHighlight="#1A3F7D"
            android:textColorLink="#1A3F7D" />

        <TextView
            android:id="@+id/tv_transDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TransferDescription"
            android:textColor="#1A3F7D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/en_transDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHighlight="#1A3F7D"
            android:textColorLink="#1A3F7D" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#1A3F7D"
            android:textColorHint="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#1A3F7D"
            android:textColorHint="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
