<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".registered_benefic_transfer">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="110dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30px"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.217">


        <TextView
            android:id="@+id/tv_confirmTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmTransfer"
            android:textAlignment="center"
            android:textColor="#1A3F7D"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">


                    <TextView
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fromAccount"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/beneficiary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BeneficiaryName"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_beneficiaryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/beneficiaryAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BeneficiaryAccountNumber"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_beneficiaryAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/bank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Bank"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_bank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/branch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Branch"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_branch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp"
                         />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TransferAmount"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_transferAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TransferDate"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_transDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#1A3F7D"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fromAccount"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_transDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#1A3F7D"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/pay_now_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFC107"
                android:text="@string/payNow"
                android:textAllCaps="false"
                android:textColor="#1A3F7D"
                android:textColorHint="#FF9800"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.872" />

            <Button style="style_btn"
                android:id="@+id/cancel_transfer"
                android:text="@string/cancel"
                android:backgroundTint="#FFC107"
                android:textColor="#1A3F7D"
                android:textColorHint="#FF9800"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>